@@ -4,7 +4,8 @@ Changelog for collective.editskinswitcher
 0.9 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Also accept urls like admin.example.org as edit urls.
+  [maurits]
 
 
 0.8 (2010-04-16)
